--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -192,6 +192,9 @@ a,a:hover{
     float: right;
     text-align: right;
  }
+ .custom-tooltip {
+    --bs-tooltip-bg: var(--bs-primary);
+  }
 .rtl div.table-responsive>div.dataTables_wrapper>div.row:first-child>div[class^=col-]:first-child {
     display: none;
 }
